# miu

./: Cargo.toml  readme.md
data/classic/: chapters.json  levels.json  names.json
data/ultra/: chapters.json
src/: data.rs  error.rs  lib.rs  parse.rs  score.rs  test_util.rs
src/weekly/: challenge.rs  mod.rs  name_lang.rs  physics_mod.rs  scorebucket.rs
